# R3BRoot

./: .clang-tidy  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  build.py
.github/actions/cache-restore/: action.yml
.github/actions/cache-save/: action.yml
.github/actions/ctest-cdash/: action.yml
.github/actions/pre-build/: action.yml
.github/actions/r3bbuild-steps/: action.yml
.github/workflows/: clangtidy.yml  main.yml  static_analysis.yml
analysis/: CMakeLists.txt
atima/test/: CMakeLists.txt
cmake/: CMakeLists.txt
cmake/scripts/: R3BRootConfig.cmake.in  fetchGTest.cmake  install_r3b_package.cmake
cmake/utils/: create_library_with_dictionary.cmake
config/: default.yml
gconfig/: SetCuts.C
geometry/: califa_full.geo.root
los/: CMakeLists.txt
neuland/: .clang-tidy  .cmake-format  CMakeLists.txt
neuland/calibration/: CMakeLists.txt  NeulandCalibrationLinkDef.h  R3BNeulandCal2Hit.cxx  R3BNeulandCal2HitPar.cxx  R3BNeulandCal2HitPar.h  R3BNeulandCosmicTracker.cxx  R3BNeulandCosmicTracker.h  R3BNeulandHitCalibrationBar.cxx  R3BNeulandHitCalibrationBar.h  R3BNeulandTSyncer.cxx
neuland/calibration/cal_to_hit/: R3BNeulandCalToHitParTask.cxx  R3BNeulandCalToHitParTask.h
neuland/calibration/cal_to_hit/engine/: R3BNeulandLSQREngineAdaptor.cxx  R3BNeulandLSQREngineAdaptor.h  R3BNeulandMillepede.cxx  R3BNeulandMillepede.h
neuland/calibration/hitParameter/: CMakeLists.txt  NeulandHitParameterLinkDef.h  R3BNeulandHitCalibrationEngine.cxx  R3BNeulandHitCalibrationEngine.h  R3BNeulandTSyncer.h
neuland/calibration/legacy/: NeulandCalibrationLinkDef.h  R3BNeulandCal2Hit.cxx  R3BNeulandCal2HitPar.cxx  R3BNeulandCal2HitPar.h  R3BNeulandCosmicTracker.cxx  R3BNeulandCosmicTracker.h  R3BNeulandHitCalibrationBar.cxx  R3BNeulandHitCalibrationBar.h  R3BNeulandHitCalibrationEngine.cxx  R3BNeulandHitCalibrationEngine.h  R3BNeulandHitPar.cxx  R3BNeulandHitPar.h  R3BNeulandMapped2Cal.cxx  R3BNeulandTSyncer.cxx  R3BNeulandTSyncer.h  R3BNeulandTacquilaMapped2Cal.cxx
neuland/calibration/map_to_cal/: R3BNeulandMapToCalParTask.cxx  R3BNeulandMapToCalTask.cxx  R3BNeulandMapToCalTask.h
neuland/calibration/mille/: CMakeLists.txt
neuland/calibration/share/: CMakeLists.txt  R3BNeulandCalibrationTask.cxx  R3BNeulandCalibrationTask.h  R3BNeulandParSet.cxx
neuland/digitizing/: CMakeLists.txt  DigitizingChannel.cxx  DigitizingChannel.h  DigitizingChannelMock.h  DigitizingEngine.h  DigitizingPaddle.cxx  DigitizingPaddle.h  DigitizingPaddleMock.h  DigitizingPaddleNeuland.cxx  DigitizingPaddleNeuland.h  DigitizingTacQuila.cxx  DigitizingTacQuila.h  DigitizingTamex.cxx  DigitizingTamex.h  NeulandDigitizingLinkDef.h  NeulandPointFilter.cxx  NeulandPointFilter.h  NeulandSimCalData.h  R3BDigitizingChannel.h  R3BDigitizingEngine.h  R3BDigitizingPaddle.cxx  R3BDigitizingPaddle.h  R3BDigitizingPaddleNeuland.cxx  R3BDigitizingPaddleNeuland.h  R3BDigitizingTamex.cxx  R3BDigitizingTamex.h  R3BNeulandDigitizer.cxx  R3BNeulandDigitizer.h  R3BNeulandHitMon.cxx  R3BNeulandHitMon.h
neuland/digitizing/Muon/: R3BNeulandDigitizerCalData.cxx  R3BNeulandDigitizerCalData.h
neuland/docs/figs/: .$DigiAbstraction.drawio.bkp  DigiAbstraction.drawio
neuland/executables/: CMakeLists.txt  Generators.h  R3BIOFiles.cxx  R3BIOFiles.h  R3BNeulandAnalyser.cxx  R3BNeulandAnalyser.h  R3BNeulandRunner.cxx  R3BNeulandRunner.h  R3BNeulandSimulator.cxx  R3BNeulandSimulator.h  R3BNeulandYamlConfig.h  R3BYamlDetectors.cxx  R3BYamlDetectors.h  R3BYamlTasks.cxx  R3BYamlTasks.h  config.yml  neuland.cxx  neulandAna.cxx  neulandExp.cxx  neulandMuon.cxx  neulandRun.cxx  neulandSim.cxx  neuland_cal_to_hit.cxx  neuland_create_base_par.cxx  neuland_lmd_to_map.cxx  neuland_map_to_cal.cxx  neuland_online_monitor.cxx  neuland_par_merger.cxx
neuland/executables/templates/: ex_digi.cxx
neuland/geobase/: create_neuland_geo.C
neuland/online/: CMakeLists.txt  NeulandOnlineLinkDef.h
neuland/shared/: CMakeLists.txt  R3BNeulandCommon.h  R3BNeulandGeoPar.cxx  R3BProgramOptions.cxx  R3BProgramOptions.h
neuland/shared/cppreflct/: .clang-format  CMakeLists.txt  R3BCppReflct.h  R3BCppReflct_boilerplate.h  R3BCppReflct_traits.h  write_refl_boilerplate.py
neuland/shared/multiProc/: CMakeLists.txt  R3BMultiProcess.cxx  R3BMultiProcess.h
neuland/shared/ymlConfig/: CMakeLists.txt  R3BYamlConfig.h  R3BYamlConfigGeneral.h  R3BYamlConfigNode.h  R3BYamlExceptions.h
neuland/simulation/: CMakeCache.txt  CMakeLists.txt  NeulandSimulationLinkDef.h  R3BNeuland.cxx  R3BNeuland.h
neuland/simulation/generator/: CosmicMuon.h  CosmicMuonDistributions.h  generator.cxx  generator.h  generatorOptimized.h
neuland/test/: CMakeLists.txt  testClusteringEngine.cxx
neuland/test/digitizing/: CMakeLists.txt  MockModels.h  testNeulandDigitizingPaddle.cxx  testNeulandDigitizingTamex.cxx
neuland/unpack/: R3BNeulandTcal.cxx
passive/: R3BCaveYamlSetup.h
r3bbase/: CMakeLists.txt  R3BEventHeader.cxx  R3BEventHeader.h  R3BEventHeaderPropagator.cxx  R3BEventHeaderPropagator.h  R3BFileSource.cxx  R3BFileSource.h  R3BFileSource2.cxx  R3BFileSource2.h  R3BIOConnector.h  R3BShared.h
r3bdata/: CMakeLists.txt  DataLinkDef.h
r3bdata/neulandData/: R3BNeulandCalData.cxx  R3BNeulandCalData.h  R3BNeulandHit.cxx  R3BNeulandHit.h  R3BNeulandPoint.h
r3bgen/: CMakeLists.txt
r3bsource/: CMakeLists.txt  SourceLinkDef.h
r3bsource/base/: R3BUcesbSource.cxx  R3BUcesbSource2.cxx  R3BUcesbSource2.h  R3BUnpackReader.cxx  R3BUnpackReader.h
r3bsource/base/utils/: R3BUcesbLauncher.cxx  R3BUcesbLauncher.h  R3BUcesbMappingFlag.h  R3BUcesbStructInfo.cxx
r3bsource/neuland/: R3BNeulandTamexReader2.cxx  ext_h101_raw_nnp_tamex.h
tracker_rene/: CMakeLists.txt
tracking/: CMakeLists.txt
util/: generate_geo_test.sh
